config/samples/e2e/bases/network-policy/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
- network.yaml
- machine1.yaml
- machine2.yaml
- network-policy.yaml
