config/samples/e2e/bases/network-policy/machine2.yaml
apiVersion: compute.ironcore.dev/v1alpha1
kind: Machine
metadata:
  name: machine-sample2
spec:
  machineClassRef:
    name: machineclass-sample
  ignitionRef:
    name: ignition
    key: ignition.yaml
  networkInterfaces:
  - name: primary
    ephemeral:
      networkInterfaceTemplate:
        metadata:
          labels:
            machine: "machine-sample2"
        spec:
          ipFamilies:
          - IPv4
          ips:
          - value: 10.0.0.2
          networkRef:
            name: network-sample
          virtualIP:
            ephemeral:
              virtualIPTemplate:
                spec:
                  type: Public
                  ipFamily: IPv4
  volumes:
  - name: root-disk
    ephemeral:
      volumeTemplate:
        spec:
          volumeClassRef:
            name: volumeclass-sample
          resources:
            storage: 10Gi
          dataSource:
            osImage:
              image: gardenlinux:rootfs-image
